[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Fonts/PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/GUI/Lost.gd" type="Script" id=2]
[ext_resource path="res://assets/pause/buttom/continue.png" type="Texture" id=3]
[ext_resource path="res://assets/pause/buttom/sair.png" type="Texture" id=4]
[ext_resource path="res://assets/GameOver/pixil-layer-Background.png" type="Texture" id=5]
[ext_resource path="res://assets/GameOver/Background.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 53
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 53
font_data = ExtResource( 1 )

[node name="LostCanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="LostPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -236.0
margin_right = 282.0
margin_bottom = -6.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="LostPanel"]
position = Vector2( 152, 252.254 )
scale = Vector2( 3.48947, 3.32353 )
texture = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="LostPanel"]
position = Vector2( 168, 192 )
scale = Vector2( 3.35909, 3.16401 )
texture = ExtResource( 5 )

[node name="TryAgain" type="Button" parent="LostPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -333.0
margin_top = 277.0
margin_right = 171.0
margin_bottom = 373.0
custom_fonts/font = SubResource( 1 )
text = "Try again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="LostPanel/TryAgain"]
position = Vector2( 251.438, 45.8207 )
scale = Vector2( 2.45209, 2.56005 )
texture = ExtResource( 3 )

[node name="Quit" type="Button" parent="LostPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -261.0
margin_top = 445.0
margin_right = 123.0
margin_bottom = 526.0
custom_fonts/font = SubResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="LostPanel/Quit"]
position = Vector2( 195.995, 36.6581 )
scale = Vector2( 2.68595, 2.23866 )
texture = ExtResource( 4 )
[connection signal="mouse_entered" from="LostPanel/TryAgain" to="." method="_on_TryAgain_mouse_entered"]
[connection signal="mouse_exited" from="LostPanel/TryAgain" to="." method="_on_TryAgain_mouse_exited"]
[connection signal="pressed" from="LostPanel/TryAgain" to="." method="_on_TryAgain_pressed"]
[connection signal="mouse_entered" from="LostPanel/Quit" to="." method="_on_Quit_mouse_entered"]
[connection signal="mouse_exited" from="LostPanel/Quit" to="." method="_on_Quit_mouse_exited"]
[connection signal="pressed" from="LostPanel/Quit" to="." method="_on_Quit_pressed"]
